--- a/AspNetCore.CustomHeaderMiddleware/AspNetCore.CustomHeaderMiddleware.csproj
+++ b/AspNetCore.CustomHeaderMiddleware/AspNetCore.CustomHeaderMiddleware.csproj
@@ -2,15 +2,27 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Nurzhan</Authors>
     <Description>Middleware component which allows using custom response header values.</Description>
     <RepositoryUrl>https://github.com/nurzhanme/AspNetCore.CustomHeaderMiddleware</RepositoryUrl>
     <PackageTags>asp.net core, custom, header, middleware</PackageTags>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <FileVersion>1.0.0.1</FileVersion>
+    <Version>1.0.1</Version>
+    <PackageProjectUrl>https://github.com/nurzhanme/AspNetCore.CustomHeaderMiddleware</PackageProjectUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
